fix party link word wrap

--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ h1 {
     line-height: 22px;
     color: #FFFFFF;
     text-decoration: none;
+    white-space: nowrap;
 }
 .party-link img {
     width: 25%;
